examples/tests/valid/enums.w
enum SomeEnum {
    ONE, TWO, THREE
}

let one = SomeEnum.ONE;
let two: SomeEnum = SomeEnum.TWO; // Try with explicit type annotation
