examples/tests/invalid/enums.w
enum SomeEnum {
    ONE, TWO, THREE
}

let four = SomeEnum.FOUR;
// ERR              ^^^^ enum value does not exist
